# jupiter-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  jupiter_engine.sln
assets/shaders/: DefaultTexture.frag  DefaultTexture.vert  DefaultTextureShader.frag
engine/: CMakeLists.txt
engine/assets/shaders/: BatchRenderShader.vert
engine/src/: Jpch.h  Jupiter.h
engine/src/base/: Application.cpp  Application.h  Assert.h  Defines.h  Input.h  Logger.h  Random.h  Timer.h  Window.cpp  Window.h
engine/src/cameras/: OrthographicCamera.cpp  OrthographicCamera.h  PrespectiveCamera.h
engine/src/events/: Event.h  EventDefines.h  EventHandler.h  EventManager.cpp  EventManager.h  WindowEvents.h
engine/src/math/vector/: Vector3.h
engine/src/memory/: MemoryArena.cpp  MemoryArena.h  MemoryUtils.h
engine/src/renderer/: BatchRenderer.cpp  BatchRenderer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.h
engine/src/renderer/opengl/: GLAssert.h  GLContext.cpp  GLFramebuffer.cpp  GLFramebuffer.h  GLIndexBuffer.cpp  GLRenderer.cpp  GLVertexBuffer.cpp
engine/src/resources/: TextureLoader.cpp
engine/src/scene/: ECRegistry.h
engine/src/scene/primitives/: 2DPrimitives.h
engine/src/ui/imgui/: ImGuiUILayer.cpp  ImGuiUILayer.h
jupiter/: CMakeLists.txt
jupiter/assets/shaders/: BatchRenderShader.frag  DefaultTextureShader.frag  DefaultTextureShader.vert
jupiter/src/: Jpch.h  Jupiter.h
jupiter/src/base/: Application.cpp  Application.h  Defines.h  Entry.h  Logger.h  Profile.h  Window.cpp  Window.h
jupiter/src/cameras/: BaseCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  PrespectiveCamera.cpp  PrespectiveCamera.h
jupiter/src/events/: EventHandler.h  EventManager.cpp  WindowEvents.h
jupiter/src/math/: MathUtils.h
jupiter/src/math/matrix/: Matrix4x4.h  Transform.h
jupiter/src/math/vector/: Vector2.h  Vector3.h  Vector4.h
jupiter/src/memory/: MemoryArena.h  MemoryUtils.h
jupiter/src/platform/win32/: Win32Input.cpp  Win32Window.cpp  Win32Window.h
jupiter/src/renderer/: BatchRenderer.cpp  BatchRenderer.h  GraphicsContext.h  IndexBuffer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  PrimitivesRenderer.cpp  PrimitivesRenderer.h  RenderCommand.h  Renderer.h  RendererBackend.cpp  RendererBackend.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
jupiter/src/renderer/opengl/: GLContext.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
jupiter/src/resources/: ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
jupiter/src/scene/primitives/: 2DPrimitives.h
jupiter/src/ui/: UILayer.h
jupiter/src/ui/imgui/: ImGuiUILayer.cpp  ImGuiUILayer.h
jupiter_engine/: CMakeLists.txt
jupiter_engine/external_libs/glad/: CMakeLists.txt
jupiter_engine/external_libs/glad/src/: glad.c
jupiter_engine/include/jupiter/: EntryPoint.h  Jpch.h  Jupiter.h  Logger.h
jupiter_engine/include/jupiter/base/: Application.h  Assert.h  BaseDefines.h  EntryPoint.h  Logger.h
jupiter_engine/include/jupiter/events/: Event.h  EventDefines.h  EventHandler.h  EventManager.h  KeyboardEvents.h  WindowEvents.h
jupiter_engine/src/: Jpch.cpp  Jpch.h  Jupiter.h
jupiter_engine/src/base/: Application.cpp  Application.h  Assert.h  BaseDefines.h  EntryPoint.h  Input.h  Logger.cpp  Logger.h  Window.h
jupiter_engine/src/events/: Event.h  EventHandler.h  EventManager.cpp  EventManager.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
jupiter_engine/src/jupiter/: Application.cpp  Application.h  Core.h  EntryPoint.h  EventManager.cpp  Logger.cpp  Logger.h
jupiter_engine/src/math/: MathUtils.h
jupiter_engine/src/math/matrix/: Matrix4x4.h  Transform.h
jupiter_engine/src/math/vector/: Vector.h  Vector2.h  Vector3.h  Vector4.h
jupiter_engine/src/memory/: LinearAllocator.cpp  LinearAllocator.h  Memory.h  MemoryArena.cpp  MemoryArena.h
jupiter_engine/src/platform/: Win32Window.cpp  Win32Window.h
jupiter_engine/src/platform/win32/: Win32Input.cpp  Win32Window.cpp  Win32Window.h
jupiter_engine/src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexBuffer.h
jupiter_engine/src/renderer/opengl/: GLContext.cpp  GLContext.h  GLShader.cpp  GLShader.h  GLVertexBuffer.h
jupiter_engine/src/ui/: UILayer.h
jupiter_engine/src/ui/imgui/: ImGuiUILayer.cpp  ImGuiUILayer.h
playground/: .clang-format
playground/2dsandbox/: JupiterApp2d.cpp
playground/2dsandbox/assets/shaders/: DemoShader.frag  DemoShader.vert
playground/3dsandbox/: JupiterApp3d.cpp
playground/sandbox2d/: JupiterApp2D.cpp
playground/src/: JupiterApp.cpp  PlaygroundApp.cpp
